@@ -9466,52 +9466,52 @@ int total_restore_window_array_elements=0;
 //Y tambien al reabrir todas ventanas en el cambio de estilo de GUI style
 //La ultima siempre finaliza con funcion NULL
 zxvision_known_window_names zxvision_known_window_names_array[]={
-	{"waveform",menu_audio_new_waveform,bitmap_button_ext_desktop_waveform},
-	{"ayregisters",menu_ay_registers,bitmap_button_ext_desktop_audioregisters},
-	{"aypiano",menu_ay_pianokeyboard,bitmap_button_ext_desktop_audiopiano},
-	{"aysheet",menu_ay_partitura,bitmap_button_ext_desktop_audiosheet},
-	{"ayplayer",menu_audio_new_ayplayer,bitmap_button_ext_desktop_ayplayer},
-	{"wavepiano",menu_beeper_pianokeyboard,bitmap_button_ext_desktop_wavepiano},
+	{"waveform","waveform",menu_audio_new_waveform,bitmap_button_ext_desktop_waveform},
+	{"ayregisters","ayregs",menu_ay_registers,bitmap_button_ext_desktop_audioregisters},
+	{"aypiano","aypiano",menu_ay_pianokeyboard,bitmap_button_ext_desktop_audiopiano},
+	{"aysheet","aysheet",menu_ay_partitura,bitmap_button_ext_desktop_audiosheet},
+	{"ayplayer","ayplayer",menu_audio_new_ayplayer,bitmap_button_ext_desktop_ayplayer},
+	{"wavepiano","wavepiano",menu_beeper_pianokeyboard,bitmap_button_ext_desktop_wavepiano},
 
 #ifdef EMULATE_VISUALMEM
-	{"visualmem",menu_debug_new_visualmem,bitmap_button_ext_desktop_visualmem},
+	{"visualmem","visualmem",menu_debug_new_visualmem,bitmap_button_ext_desktop_visualmem},
 #endif
 
 #ifdef EMULATE_CPU_STATS
-	{"cpucompactstatistics",menu_debug_cpu_resumen_stats,bitmap_button_ext_desktop_cpustatistics},
+	{"cpucompactstatistics","cpucompactstatistics",menu_debug_cpu_resumen_stats,bitmap_button_ext_desktop_cpustatistics},
 #endif
 
-	{"sprites",menu_debug_view_sprites,bitmap_button_ext_desktop_viewsprites},
-	{"watches",menu_watches,bitmap_button_ext_desktop_watches},
-	{"displaypalettes",menu_display_total_palette,bitmap_button_ext_desktop_colour_palettes},
-	{"videoinfo",menu_debug_tsconf_tbblue_msx_videoregisters,bitmap_button_ext_desktop_videoinfo},
-	{"tsconftbbluespritenav",menu_debug_tsconf_tbblue_msx_spritenav,bitmap_button_ext_desktop_tsconftbbluespritenav},
-	{"tsconftbbluetilenav",menu_debug_tsconf_tbblue_msx_tilenav,bitmap_button_ext_desktop_tsconftbbluetilenav},
-	{"debugcpu",menu_debug_registers,bitmap_button_ext_desktop_debugcpu},
-	{"helpshowkeyboard",menu_help_show_keyboard,bitmap_button_ext_desktop_helpkeyboard},
-    {"debugconsole",menu_debug_unnamed_console,bitmap_button_ext_desktop_debugconsole},
-    {"audiogensound",menu_audio_general_sound,bitmap_button_ext_desktop_geneneralsoundregisters},
-    {"debugioports",menu_debug_ioports,bitmap_button_ext_desktop_ioports},
-    {"hexeditor",menu_debug_hexdump,bitmap_button_ext_desktop_hexeditor},
-    {"corestatistics",menu_about_core_statistics,bitmap_button_ext_desktop_corestatistics},
-    {"viewsensors",menu_debug_view_sensors,bitmap_button_ext_desktop_view_sensors},
-    {"visualrealtape",menu_visual_realtape,bitmap_button_ext_desktop_visualrealtape},
-    {"textadvmap",menu_debug_textadventure_map_connections,bitmap_button_ext_desktop_text_adventure_map},
-    {"shortcutshelper",menu_shortcuts_window,bitmap_button_ext_desktop_shortcutshelper},
-    {"processmanagement",menu_display_window_list,bitmap_button_ext_desktop_processmanagement},
-    {"hilowconvertaudio",menu_hilow_convert_audio,bitmap_lowericon_ext_desktop_hilow_convert},
-    {"visualfloppy",menu_visual_floppy,bitmap_button_ext_desktop_visualfloppy},
-    {"toyzxeyes",menu_toy_follow_mouse,bitmap_button_ext_desktop_zxeyes},
-    {"processswitcher",menu_process_switcher,bitmap_button_ext_desktop_processswitcher},
-    {"zxlife",menu_toys_zxlife,bitmap_button_ext_desktop_zxlife},
-    {"textadvlocimage",menu_textadv_loc_image,bitmap_button_ext_desktop_textadvlocimage},
-    {"asciitable",menu_ascii_table,bitmap_button_ext_desktop_asciitable},
-    {"networktraffic",menu_network_traffic,bitmap_button_ext_desktop_userdefined},
-    {"videooutput",menu_video_output,bitmap_button_ext_desktop_userdefined},
-    {"externalaudiosource",menu_realtape_record_input,bitmap_button_ext_desktop_record_input},
-    {"inspectrumanalyzer",menu_input_spectrum_analyzer,bitmap_button_ext_desktop_userdefined},
+	{"sprites","sprites",menu_debug_view_sprites,bitmap_button_ext_desktop_viewsprites},
+	{"watches","watches",menu_watches,bitmap_button_ext_desktop_watches},
+	{"displaypalettes","displaypalettes",menu_display_total_palette,bitmap_button_ext_desktop_colour_palettes},
+	{"videoinfo","videoinfo",menu_debug_tsconf_tbblue_msx_videoregisters,bitmap_button_ext_desktop_videoinfo},
+	{"tsconftbbluespritenav","tsconftbbluespritenav",menu_debug_tsconf_tbblue_msx_spritenav,bitmap_button_ext_desktop_tsconftbbluespritenav},
+	{"tsconftbbluetilenav","tsconftbbluetilenav",menu_debug_tsconf_tbblue_msx_tilenav,bitmap_button_ext_desktop_tsconftbbluetilenav},
+	{"debugcpu","debug cpu",menu_debug_registers,bitmap_button_ext_desktop_debugcpu},
+	{"helpshowkeyboard","helpshowkeyboard",menu_help_show_keyboard,bitmap_button_ext_desktop_helpkeyboard},
+    {"debugconsole","debugconsole",menu_debug_unnamed_console,bitmap_button_ext_desktop_debugconsole},
+    {"audiogensound","audiogensound",menu_audio_general_sound,bitmap_button_ext_desktop_geneneralsoundregisters},
+    {"debugioports","debugioports",menu_debug_ioports,bitmap_button_ext_desktop_ioports},
+    {"hexeditor","hexeditor",menu_debug_hexdump,bitmap_button_ext_desktop_hexeditor},
+    {"corestatistics","corestats",menu_about_core_statistics,bitmap_button_ext_desktop_corestatistics},
+    {"viewsensors","viewsensors",menu_debug_view_sensors,bitmap_button_ext_desktop_view_sensors},
+    {"visualrealtape","visualrealtape",menu_visual_realtape,bitmap_button_ext_desktop_visualrealtape},
+    {"textadvmap","textadvmap",menu_debug_textadventure_map_connections,bitmap_button_ext_desktop_text_adventure_map},
+    {"shortcutshelper","shortcutshelper",menu_shortcuts_window,bitmap_button_ext_desktop_shortcutshelper},
+    {"processmanagement","processmanagement",menu_display_window_list,bitmap_button_ext_desktop_processmanagement},
+    {"hilowconvertaudio","hilowconvertaudio",menu_hilow_convert_audio,bitmap_lowericon_ext_desktop_hilow_convert},
+    {"visualfloppy","visualfloppy",menu_visual_floppy,bitmap_button_ext_desktop_visualfloppy},
+    {"toyzxeyes","toyzxeyes",menu_toy_follow_mouse,bitmap_button_ext_desktop_zxeyes},
+    {"processswitcher","processswitcher",menu_process_switcher,bitmap_button_ext_desktop_processswitcher},
+    {"zxlife","zxlife",menu_toys_zxlife,bitmap_button_ext_desktop_zxlife},
+    {"textadvlocimage","textadvlocimage",menu_textadv_loc_image,bitmap_button_ext_desktop_textadvlocimage},
+    {"asciitable","asciitable",menu_ascii_table,bitmap_button_ext_desktop_asciitable},
+    {"networktraffic","networktraffic",menu_network_traffic,bitmap_button_ext_desktop_userdefined},
+    {"videooutput","videooutput",menu_video_output,bitmap_button_ext_desktop_userdefined},
+    {"externalaudiosource","ext audio",menu_realtape_record_input,bitmap_button_ext_desktop_record_input},
+    {"inspectrumanalyzer","inspectrumanalyzer",menu_input_spectrum_analyzer,bitmap_button_ext_desktop_userdefined},
 
-	{"",NULL,bitmap_button_ext_desktop_userdefined} //NO BORRAR ESTA!!
+	{"","",NULL,bitmap_button_ext_desktop_userdefined} //NO BORRAR ESTA!!
 };
 
 
